force-app/main/default/objects/Meeting_image__c/Meeting_image__c.object-meta.xml
<CustomObject>
    <label>Meeting image</label>
    <nameField>
        <label>Meeting image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>