force-app/main/default/objects/Meeting_image__c/fields/image_name__c.field-meta.xml
<CustomField>
    <fullName>image_name__c</fullName>
    <label>Image name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>