force-app/main/default/objects/Meeting_image__c/fields/meeting__c.field-meta.xml
<CustomField>
    <fullName>meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Meeting images</relationshipLabel>
    <relationshipName>Meeting_images</relationshipName>
    <type>Lookup</type>
</CustomField>