force-app/main/default/objects/Meeting_image__c/fields/meetingId__c.field-meta.xml
<CustomField>
    <fullName>meetingId__c</fullName>
    <label>Meeting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>